# flighthacker

./: .gitignore  Dockerfile  RUNBOOK.md  config.py  dependencies.py  main.py  pyproject.toml  railway.toml  start.py
api/v1/: router.py
api/v1/routes/: search.py  users.py
backend/: .gitignore  Dockerfile  dependencies.py  main.py  nixpacks.toml
backend/api/: middleware.py
backend/api/v1/routes/: alerts.py  search.py
backend/data/: airports.csv  apd_avoidance_hubs.csv  carrier_surcharges.csv  fare_zones.csv  ground_transport.csv  major_hubs.csv
backend/db/: session.py
backend/models/: __init__.py  common.py  search.py  user.py
backend/repositories/: static_data.py
backend/services/: currency.py  flight_search.py  hack_engine.py  hub_scorer.py
data/: airports.csv  apd_avoidance_hubs.csv  carrier_surcharges.csv  fare_zones.csv  ground_transport.csv  major_hubs.csv
db/: base.py  orm_models.py
mobile/: app.json  babel.config.js  eas.json  package-lock.json  package.json  tailwind.config.js
mobile/api/: client.ts  search.ts
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  alerts.tsx  index.tsx  profile.tsx  results.tsx
mobile/app/result/: [id].tsx
mobile/components/: AirportPicker.tsx  DatePickerModal.tsx
mobile/constants/: theme.ts
mobile/data/: airports.ts
mobile/hooks/: useSearch.ts
mobile/stores/: searchStore.ts
models/: search.py
services/: cost_calculator.py  error_fares.py  flight_search.py  hack_engine.py  hack_methods_extra.py
